@@ -11,7 +11,7 @@ Module:v_comments  File:verilog/v_comments.v
   Net:c  I  Type:wire  Array:  0:10
   Net:d  I  Type:reg  Array:  ((2*32)-1):0
   Net:d1  I  Type:wire  Array:  32:0
-  Net:d2  I  Type:wire  Array:  (`math-1):0
+  Net:d2  I  Type:wire  Array:  (MATH-1):0
   Net:d3  I  Type:wire  Array:  32-1:0
   Net:e    Type:reg  Array:  11:0
 Module:v_hier_noport  File:verilog/v_hier_noport.v
